Revert "Support audit ignore policy by index privileges"
This reverts commit 67574b2f