@@ -96,7 +96,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -301,17 +300,14 @@ public class LoggingAuditTrail implements AuditTrail, ClusterStateListener {
             this.eventFilterPolicyRegistry.set(policyName, newPolicy);
         }, (policyName, filtersList) -> {
             EventFilterPolicy.parsePredicate(filtersList);
-            eventFilterPolicyRegistry.get(policyName).orElse(new EventFilterPolicy(policyName, settings)).
-                validateIndexPrivilege(filtersList); });
+            EventFilterPolicy.testtest(filtersList);
+            });
         clusterService.getClusterSettings().addAffixUpdateConsumer(FILTER_POLICY_IGNORE_CLUSTER_PRIVILEGES, (policyName, filtersList) -> {
             final Optional<EventFilterPolicy> policy = eventFilterPolicyRegistry.get(policyName);
             final EventFilterPolicy newPolicy = policy.orElse(new EventFilterPolicy(policyName, settings)).
                 changeClusterPrivilegesFilter(filtersList);
             this.eventFilterPolicyRegistry.set(policyName, newPolicy);
-        }, (policyName, filtersList) -> {
-            EventFilterPolicy.parsePredicate(filtersList);
-            eventFilterPolicyRegistry.get(policyName).orElse(new EventFilterPolicy(policyName, settings)).
-                validateClusterPrivilege(filtersList); });
+        }, (policyName, filtersList) -> EventFilterPolicy.parsePredicate(filtersList));
         // this log filter ensures that audit events are not filtered out because of the log level
         final LoggerContext ctx = LoggerContext.getContext(false);
         MarkerFilter auditMarkerFilter = MarkerFilter.createFilter(AUDIT_MARKER.getName(), Result.ACCEPT, Result.NEUTRAL);
@@ -1426,7 +1422,7 @@ public class LoggingAuditTrail implements AuditTrail, ClusterStateListener {
             this.ignoreIndexPrivilegesPredicate = ignoreIndexPrivilegesPredicate;
             this.ignoreClusterPrivilegesPredicate = ignoreClusterPrivilegesPredicate;
 
-            if (ignoreIndexPrivilegesPredicate.test("") == false && ignoreClusterPrivilegesPredicate.test("") == false) {
+            if (!ignoreIndexPrivilegesPredicate.test("") && !ignoreClusterPrivilegesPredicate.test("")) {
                 final String message = String.format(
                     Locale.ROOT,
                     "Both Index and Cluster privilege ignore filters are set for policy [%s]. " +
@@ -1434,7 +1430,7 @@ public class LoggingAuditTrail implements AuditTrail, ClusterStateListener {
                 throw new IllegalArgumentException(message);
             }
 
-            if (ignoreClusterPrivilegesPredicate.test("") == false) {
+            if (!ignoreClusterPrivilegesPredicate.test("")) {
                 ClusterPermission.Builder builder = ClusterPermission.builder();
                 String[] clusterPrivileges = ignoreClusterPrivilegesPredicate.toString().split("\\|");
                 for (String privilege : clusterPrivileges) {
@@ -1445,11 +1441,10 @@ public class LoggingAuditTrail implements AuditTrail, ClusterStateListener {
                 this.clusterPermission = ClusterPermission.NONE;
             }
 
-            if (ignoreIndexPrivilegesPredicate.test("") == false) {
+            if (!ignoreIndexPrivilegesPredicate.test("")) {
                 List<IndicesPermission.Group> groups = new ArrayList<>();
-                Set<String> set = new HashSet<>(Arrays.stream(ignoreIndexPrivilegesPredicate.toString().split("\\|"))
-                    .collect(Collectors.toSet()));
-                groups.add(new IndicesPermission.Group(IndexPrivilege.get(set), FieldPermissions.DEFAULT, null, false, "*"));
+                groups.add(new IndicesPermission.Group(IndexPrivilege.get(Set.of(ignoreIndexPrivilegesPredicate.toString().split("\\|"))),
+                    FieldPermissions.DEFAULT, null, false, "*"));
                 this.indexPermission = groups.isEmpty() ? IndicesPermission.NONE :
                     new IndicesPermission(groups.toArray(new IndicesPermission.Group[groups.size()]));
             } else {
@@ -1482,39 +1477,22 @@ public class LoggingAuditTrail implements AuditTrail, ClusterStateListener {
                 return new EventFilterPolicy(name, ignorePrincipalsPredicate, ignoreRealmsPredicate,
                     ignoreRolesPredicate, ignoreIndicesPredicate, parsePredicate(filtersList), ignoreClusterPrivilegesPredicate);
             } catch (IllegalArgumentException e) {
-                return this;
+                return new EventFilterPolicy(name, ignorePrincipalsPredicate, ignoreRealmsPredicate,
+                    ignoreRolesPredicate, ignoreIndicesPredicate, ignoreIndexPrivilegesPredicate, ignoreClusterPrivilegesPredicate);
             }
         }
 
         private EventFilterPolicy changeClusterPrivilegesFilter(List<String> filtersList) {
-            try {
-                return new EventFilterPolicy(name, ignorePrincipalsPredicate, ignoreRealmsPredicate, ignoreRolesPredicate,
-                    ignoreIndicesPredicate, ignoreIndexPrivilegesPredicate, parsePredicate(filtersList));
-            } catch (IllegalArgumentException e) {
-                return this;
-            }
+            return new EventFilterPolicy(name, ignorePrincipalsPredicate, ignoreRealmsPredicate, ignoreRolesPredicate,
+                ignoreIndicesPredicate, ignoreIndexPrivilegesPredicate, parsePredicate(filtersList));
         }
 
         static Predicate<String> parsePredicate(List<String> l) {
             return Automatons.predicate(emptyStringBuildsEmptyAutomaton(l));
         }
 
-        private void validateIndexPrivilege(List<String> l) {
-            try {
-                new EventFilterPolicy(name, ignorePrincipalsPredicate, ignoreRealmsPredicate,
-                    ignoreRolesPredicate, ignoreIndicesPredicate, parsePredicate(l), ignoreClusterPrivilegesPredicate);
-            } catch (IllegalArgumentException e) {
-                throw new IllegalArgumentException("Invalid setting for `index_privileges` audit policy filter found: " + e.getMessage());
-            }
-        }
-
-        private void validateClusterPrivilege(List<String> l) {
-            try {
-                new EventFilterPolicy(name, ignorePrincipalsPredicate, ignoreRealmsPredicate,
-                    ignoreRolesPredicate, ignoreIndicesPredicate, ignoreIndexPrivilegesPredicate, parsePredicate(l));
-            } catch (IllegalArgumentException e) {
-                throw new IllegalArgumentException("Invalid setting for `index_privileges` audit policy filter found: " + e.getMessage());
-            }
+        static void testtest(List<String> l) {
+            throw new IllegalStateException("Cannot dynamically update SSL settings for the exporter");
         }
 
         /**
